Fixes overflow issues with code elements of prismjs

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -4,7 +4,7 @@
 .layout {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   text-align: left;
   margin: auto;
